2010-08-08  Steven Harms <ZXB01226 at nifty.com>

	* [w3m-dev 04371] Re: "important" bugs from bugs.debian.org
	* https://bugs.launchpad.net/ubuntu/+source/w3m/+bug/131993
	* table.c (ATTR_ROWSPAN_MAX): added
	(feed_table_tag): maximum value of rowspan is ATTR_ROWSPAN_MAX

2010-08-08  d+w3m@vdr.jp

	* [w3m-dev 04360] Re: "important" bugs from bugs.debian.org
	* main.c (main): use DEFAULT_COLS
	(main): the maximum value of the -cols option is MAXIMUM_COLS
	* backend.c (backend): use DEFAULT_COLS
	* fm.h (MAXIMUM_COLS, DEFAULT_COLS): added

2010-08-04  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04369] Re: w3m's bugs from bugs.debian.org
	* terms.c (graph_ok): fix condition (UseGraphicChar != GRAPHIC_CHAR_DEC)
	* symbol.c (get_symbol): fix condition (UseGraphicChar != GRAPHIC_CHAR_ASCII)
	* rc.c (params1): type of graphic_char option is PI_SEL_C
	* main.c (main): use GRAPHIC_CHAR_ASCII and GRAPHIC_CHAR_DEC instead of FALSE and TRUE
	* fm.h (GRAPHIC_CHAR_ASCII, GRAPHIC_CHAR_DEC, GRAPHIC_CHAR_CHARSET): added

2010-08-03  d+w3m@vdr.jp

	* [w3m-dev 04363] Re: w3m's bugs from bugs.debian.org
	* doc/w3m.1: revert option -S
	* doc-jp/w3m.1: revert option -S, -e, -j and -s
	* main.c: remove codes for Debian

2010-08-03  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04343]
	* file.c (loadGeneralFile): register user name and password for proxy authentication.
	* url.c (HTTPrequest): unused variable seen_proxy_auth was removed
	* fm.h: global variables proxy_auth_cookie and pauth are removed
	* main.c (main): remove option -pauth
	* doc/MANUAL.html: ditto
	* doc-jp/MANUAL.html: ditto
	* doc-jp/w3m.1: ditto
	* doc/w3m.1: ditto
	* doc/README.passwd: added
	* doc-jp/README.passwd: added

2010-07-31  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* [w3m-dev 04350] Re: w3m's bugs from bugs.debian.org
	* file.c (process_img): Revert the change of using ATTR_TITLE if ATTR_ALT is empty.

2010-07-30  Ito Hiroyuki  <ZXB01226@nifty.com>
